--- a/templates/club_details.html
+++ b/templates/club_details.html
@@ -6,13 +6,77 @@
     <title>Brawler Info</title>
 </head>
 <body>
-    {% for i in det %}
-        <p>{{i}}</p>
-    {% endfor %}
-    {% for i in dd%}
-        {% for j in i%}
-            <p>{{j}}</p>
-        {% endfor %} 
-    {% endfor %}
+
+
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link type="text/css" rel="stylesheet" href="{{url_for('static',filename='materialize/css/materialize.min.css')}}"/>
+    <link rel="stylesheet" href="{{url_for('static',filename='css/player.css')}}" />
+    <script type="text/javascript" src="{{url_for('static', filename='materialize/js/materialize.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='materialize/js/materialize.js')}}"></script>
+    <section>
+      <nav>
+        <div class="nav-wrapper">
+          <a href="#" class="brand-logo">Club Details</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="/battles">Battle Log</a></li>
+            <li><a href="/brawler">Brawler Info</a></li>
+{#            {% if flag>0 %}#}
+              <li><a href="/club">Club Info</a></li>
+{#            {% endif %}#}
+          </ul>
+        </div>
+      </nav>
+    </section>
+
+
+
+    <section>
+        <div class="card">
+            <div class="card-body"><img>
+                <h4 class="card-title">{{det[0]}}</h4>
+                <h6 class="text-muted card-subtitle mb-2">{{det[1]}}</h6>
+                <p class="card-text">{{det[5]}}</p>
+            </div>
+        </div>
+
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    </section>
+
+
+
+    <section>
+        <div class="tbl-header">
+          <table cellpadding="0" cellspacing="0" border="0">
+            <thead>
+              <tr>
+                  <th>Tag</th>
+                  <th>Name</th>
+                  <th>Name Colour</th>
+                  <th>Role</th>
+                  <th>Trophies</th>
+              </tr>
+            </thead>
+          </table>
+        </div>
+        <div class="tbl-content">
+          <table cellpadding="0" cellspacing="0" border="0">
+            <tbody>
+                {% for i in range(0,player_number) %}
+                    <tr>
+                        <td>{{tag[i][0]}}</td>
+                        <td>{{name[i][0]}}</td>
+                        <td>{{name_colour[i][0]}}</td>
+                        <td>{{role[i][0]}}</td>
+                        <td>{{trophies[i][0]}}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+          </table>
+        </div>
+        <script type="text/javascript" src="{{url_for('static',filename='materialize/js/materialize.min.js')}}"></script>
+      </section>
+
 </body>
 </html>
