--- a/templates/battle.html
+++ b/templates/battle.html
@@ -7,24 +7,24 @@
       <div class="brawl-card">
         <div class="brawl-card__unit-stats brawl-card__unit-stats--barbar clearfix">
           <div class="tit">{{i[0]}}</div> 
-          <div class="titu">TrophyChange {{i[29]}}</div>
+          <div class="titu">Trophy Change : {{i[29]}}</div>
         </div>
         <div class="brawl-card__unit-stats brawl-card__unit-stats--barbarian clearfix">
           <div class="one-third">
             <div class="stat">
               <div class="imgstat">
-                <img src="{{url_for('static',filename='bt/{{i[6]}}.png')}}" alt="barbarian" />
+                <img src="static/bt/{{i[6]}}.png" alt="barbarian" />
               </div>
-              <div class="imgstat">Image</div>
-              <div class="imgstat">Image</div>
+              <div class="imgstat"><img src="static/bt/{{i[10]}}.png" alt="barbarian" /></div>
+              <div class="imgstat"><img src="static/bt/{{i[14]}}.png" alt="barbarian" /></div>
             </div>
             <div class="inf">
               <div class="bradet">{{i[5]}}</div>
-              <div class="bradet">{{i[8]}}</div>
+              <!-- <div class="bradet">{{i[8]}}</div> -->
               <div class="bradet">{{i[9]}}</div>
-              <div class="bradet">{{i[12]}}</div>
+              <!-- <div class="bradet">{{i[12]}}</div> -->
               <div class="bradet">{{i[13]}}</div>
-              <div class="bradet">{{i[16]}}</div>  
+              <!-- <div class="bradet">{{i[16]}}</div>   -->
             </div>
             <div class="statr">DEFEAT</div>
           </div>
@@ -38,17 +38,17 @@
 
           <div class="one-third">
             <div class="stat">
-              <div class="imgstat">Image </div>
-              <div class="imgstat">Image </div>
-              <div class="imgstat">Image </div>
+              <div class="imgstat"><img src="static/bt/{{i[18]}}.png" alt="barbarian" /></div>
+              <div class="imgstat"><img src="static/bt/{{i[22]}}.png" alt="barbarian" /></div>
+              <div class="imgstat"><img src="static/bt/{{i[26]}}.png" alt="barbarian" /></div>
             </div>
             <div class="inf">
               <div class="bradet">{{i[17]}}</div>
-              <div class="bradet">{{i[20]}}</div>
+              <!-- <div class="bradet">{{i[20]}}</div> -->
               <div class="bradet">{{i[21]}}</div>
-              <div class="bradet">{{i[24]}}</div>
+              <!-- <div class="bradet">{{i[24]}}</div> -->
               <div class="bradet">{{i[25]}}</div>
-              <div class="bradet">{{i[28]}}</div>
+              <!-- <div class="bradet">{{i[28]}}</div> -->
             </div>
             <div class="statr">VICTORY</div>
           </div>
@@ -59,61 +59,61 @@
       <div class="brawl-card">
         <div class="brawl-card__unit-stats brawl-card__unit-stats--barbar clearfix">
           <div class="tit">{{i[0]}}</div>
-          <div class="titu">TrophyChange {{i[45]}}</div>
+          <div class="titu">Trophy Change : {{i[45]}}</div>
         </div>
         <div class="brawl-card__unit-stats brawl-card__unit-stats--barbarian clearfix">
           <div class="one-two">
             <div class="showd">
-              <div class="imshowa"><img src="{{url_for('static',filename='bts/{{i[6]}}.png')}}" alt="barbarian" /> </div>
+              <div class="imshowa"><img src="static/bts/{{i[6]}}.png" alt="barbarian" /> </div>
               <div class="imshowb">{{i[5]}} </div>
-              <div class="imshowb">{{i[8]}} </div>
+              <!-- <div class="imshowb">{{i[8]}} </div> -->
             </div>
             <div class="showd">
-              <div class="imshowa">hello </div>
+              <div class="imshowa"><img src="static/bts/{{i[10]}}.png" alt="barbarian" /></div>
               <div class="imshowb">{{i[9]}} </div>
-              <div class="imshowb">{{i[12]}} </div>
+              <!-- <div class="imshowb">{{i[12]}} </div> -->
             </div>
             <div class="showd">
-              <div class="imshowa">hello </div>
+              <div class="imshowa"><img src="static/bts/{{i[14]}}.png" alt="barbarian" /></div>
               <div class="imshowb">{{i[13]}} </div>
-              <div class="imshowb">{{i[16]}} </div>
+              <!-- <div class="imshowb">{{i[16]}} </div> -->
             </div>
             <div class="showd">
-              <div class="imshowa">hello </div>
+              <div class="imshowa"><img src="static/bts/{{i[18]}}.png" alt="barbarian" /></div>
               <div class="imshowb">{{i[17]}} </div>
-              <div class="imshowb">{{i[20]}} </div>
+              <!-- <div class="imshowb">{{i[20]}} </div> -->
             </div>
             <div class="showd">
-              <div class="imshowa">hello </div>
+              <div class="imshowa"><img src="static/bts/{{i[22]}}.png" alt="barbarian" /></div>
               <div class="imshowb">{{i[21]}} </div>
-              <div class="imshowb">{{i[24]}} </div>
+              <!-- <div class="imshowb">{{i[24]}} </div> -->
             </div>
           </div>
           <div class="one-two">
             <div class="showd">
-              <div class="imshowa">hello </div>
+              <div class="imshowa"><img src="static/bts/{{i[26]}}.png" alt="barbarian" /></div>
               <div class="imshowb">{{i[25]}} </div>
-              <div class="imshowb">{{i[28]}} </div>
+              <!-- <div class="imshowb">{{i[28]}} </div> -->
             </div>
             <div class="showd">
-              <div class="imshowa">hello </div>
+              <div class="imshowa"><img src="static/bts/{{i[30]}}.png" alt="barbarian" /></div>
               <div class="imshowb">{{i[29]}} </div>
-              <div class="imshowb">{{i[32]}} </div>
+              <!-- <div class="imshowb">{{i[32]}} </div> -->
             </div>
             <div class="showd">
-              <div class="imshowa">hello </div>
+              <div class="imshowa"><img src="static/bts/{{i[34]}}.png" alt="barbarian" /></div>
               <div class="imshowb">{{i[33]}} </div>
-              <div class="imshowb">{{i[36]}} </div>
+              <!-- <div class="imshowb">{{i[36]}} </div> -->
             </div>
             <div class="showd">
-              <div class="imshowa">hello </div>
+              <div class="imshowa"><img src="static/bts/{{i[38]}}.png" alt="barbarian" /></div>
               <div class="imshowb">{{i[37]}} </div>
-              <div class="imshowb">{{i[40]}} </div>
+              <!-- <div class="imshowb">{{i[40]}} </div> -->
             </div>
             <div class="showd">
-              <div class="imshowa">hello </div>
+              <div class="imshowa"><img src="static/bts/{{i[42]}}.png" alt="barbarian" /></div>
               <div class="imshowb">{{i[41]}} </div>
-              <div class="imshowb">{{i[44]}} </div>
+              <!-- <div class="imshowb">{{i[44]}} </div> -->
             </div>
           </div>
         </div>
