--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -1,3 +1,71 @@
+<!-- Replace it to analysis.html -->
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+<style>
+/*the container must be positioned relative:*/
+.custom-select {
+  position: relative;
+  font-family: Arial;
+}
+
+.custom-select select {
+  display: none; /*hide original SELECT element:*/
+}
+
+.select-selected {
+  background-color: DodgerBlue;
+}
+
+/*style the arrow inside the select element:*/
+.select-selected:after {
+  position: absolute;
+  content: "";
+  top: 14px;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-color: #fff transparent transparent transparent;
+}
+
+/*point the arrow upwards when the select box is open (active):*/
+.select-selected.select-arrow-active:after {
+  border-color: transparent transparent #fff transparent;
+  top: 7px;
+}
+
+/*style the items (options), including the selected item:*/
+.select-items div,.select-selected {
+  color: #ffffff;
+  padding: 8px 16px;
+  border: 1px solid transparent;
+  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+  cursor: pointer;
+  user-select: none;
+}
+
+/*style items (options):*/
+.select-items {
+  position: absolute;
+  background-color: DodgerBlue;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 99;
+}
+
+/*hide the items when the select box is closed:*/
+.select-hide {
+  display: none;
+}
+
+.select-items div:hover, .same-as-selected {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+</style>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 <!-- jQuery library -->
@@ -5,76 +73,171 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<div class="analysis-constainer" style="background-color: #fd7b52;">
-<p style="left: 50%; text-align: center;">Title</p>  
-<div class="row" style="align-items: center;align-self: center; height: 400px;">
-  <div class="col-lg-6 col-sm-6 col-xs-6" style="padding: 5px 10px; left: 20%; top: 20%;">
-    Overall Win Rate
-  </div>
-  <div class="col-lg-6 col-sm-6 col-xs-6" style="padding: 5px 10px; left: 20%; top: 20%;">
-    <div class="teamteam" style="height: 40%; float: top;"> Team Win Rate</div>
-    <div class="teamteam" style="height: 40%; float: top;"> 
-      <div style="height: 33%;">Showdown Win Rate</div>
-      <div style="height: 33%; left: 50%;">Duo Win</div>
-      <div style="height: 33%; left: 50%;">Solo Win</div>
+</head>     
+
+<body style="width: 100%">
+
+<!-- <h2>Custom Select</h2> -->
+
+<!--surround the select box with a "custom-select" DIV element. Remember to set the width:-->
+<div class="analysis-constainer" style="width: 100%;background-color: #7827C4; color: #fff;">
+  <p style="left: 50%; text-align: center; font-size: 40px">Performance Analysis</p>  
+  <div class="row" style="align-items: center;align-self: center; height: 400px;">
+    <div class="col-lg-6 col-sm-6 col-xs-6" style="padding: 5px 10px; left: 10%; top: 20%; font-size: 24px;">
+      {{gen[0]}}  
     </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-lg-4 col-sm-4 col-xs-4" style="padding: 5px 10px; left: 20%;" >
-    <div class="dropdown">
-        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id = "tdd">Event Mode
-        <span class="caret"></span></button>
-        <ul class="dropdown-menu">
-          <li><a href="#">HTML</a></li>
-          <li><a href="#">CSS</a></li>
-          <li><a href="#">JavaScript</a></li>
-      </ul>
-    </div>
-  </div>
-  
-  <div class="col-lg-4 col-sm-4 col-xs-4" style="padding: 5px 10px; left: 20%;">
-      <div class="dropdown">
-        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id = "dd">Showdown Type
-        <span class="caret"></span></button>
-        <ul class="dropdown-menu">
-          <li><a href="#">Solo Showdown</a></li>
-          <li><a href="#">Duo Showdown</a></li>
-          <li><a href="#">Both</a></li>
-        </ul>
+    <div class="col-lg-6 col-sm-6 col-xs-6" style="padding: 5px 10px; left: 10%; top: 20%; font-size: 24px;">
+      <div class="teamteam" style="height: 40%; float: top; padding-bottom: 20px;"> {{gen[1]}}</div>
+      <div class="teamteam" style="height: 40%; float: top; padding: 50px 5px;"> 
+        <div style="height: 33%;">{{gen[2]}}</div>
+        <div style="height: 33%; padding-top: 30px; padding-left: 100px;">{{gen[3]}}</div>
+        <div style="height: 33%; padding-left: 100px;">{{gen[4]}}</div>
       </div>
-  </div>
-  <div class="col-lg-4 col-sm-4 col-xs-4" style="padding: 5px 10px; left: 20%;">
-    <div class="buttonn">
-      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" onclick="analyse()" >GO
     </div>
-</div>
-  
-</div>
-</div>
-<div class="obt_data" id="">
-  <div class="col-lg-6 col-sm-6 col-xs-6" style="padding: 5px 10px; left:20%;width: 50%;" id="tabl1">
+  </div>
+  <div class="row" style="padding-top: 50px; padding-bottom: 200px;">
+    <div class="col-lg-4 col-sm-4 col-xs-4" style="padding: 5px 10px; left: 20%;" >
+      <div class="custom-selec" style="width:200px;" id="tdd" >
+        <select name="select_path" id="tddd" style="background-color: chocolate; height: 50px; width: 200px;">
+            <option  selected value="">Select Game Mode:</option>
+            {% for i in lis %}
+                <option  value="{{ i }}">{{ i }}</option>                 
+            {% endfor %}
+        </select>
+        <!-- <select id="tddd" name="favorites">
+          <option value=0>Select car:</option>
+          <option value=1>Audi</option>
+          <option value=2>BMW</option>
+          <option value=3>Citroen</option>
+          <option value=4>Ford</option>
+          <option value=5>Honda</option>
+          <option value=6>Jaguar</option>
+          <option value=7>Land Rover</option>
+          <option value=8>Mercedes</option>
+          <option value=9>Mini</option>
+          <option value=10>Nissan</option>
+          <option value=11>Toyota</option>
+          <option value=12>Volvo</option>
+        </select> -->
+      </div>
+    </div>
+    <div class="col-lg-4 col-sm-4 col-xs-4" style="padding: 5px 10px; left: 20%;">
+    <div class="custom-selec" style="width:200px;" id="dd">
+          <!-- <select onchange="change_session()" name="select_path" id="select_path">
+            <option  selected value="">Select Brawler:</option>
+            {% for i in all_server_id %}
+                <option  value="{{ lis[i][0] }}">{{ lis[i][0] }}</option>                 
+            {% endfor %}
+        </select> -->
+      <select id="ddd" class="show_down_list" style="background-color: chocolate; height: 50px; width: 200px;">
+        <option selected value=0>Select Showdown Type:</option>
+        <option value=1>SoloShowdown</option>
+        <option value=2>DuoShowdown</option>
+        <option value=3>Both</option>
+      </select>
+    </div>
+  </div>
+  <!-- <div class="col-lg-3 col-sm-3 col-xs-3" style="padding: 5px 10px; left: 20%;">
+    <div class="custom-selec" style="width:200px;" id="ddc">
+      <select id="dddc" class="valid_brawlers">
+        <option value=0>Select car:</option>
+      </select>
+    </div>
+  </div> -->
+    <!-- <div class="col-lg-4 col-sm-4 col-xs-4" style="padding: 5px 10px; left: 20%;">
+        <div class="dropdown">
+          <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id = "dd">Showdown Type
+          <span class="caret"></span></button>
+          <ul class="dropdown-menu">
+            <li><a href="#">Solo Showdown</a></li>
+            <li><a href="#">Duo Showdown</a></li>
+            <li><a href="#">Both</a></li>
+          </ul>
+        </div>
+    </div> -->
+    <div class="col-lg-4 col-sm-4 col-xs-4" style="padding: 5px 10px; left: 20%;">
+      <div class="buttonn">
+        <button class="btn btn-primary dropdown-toggle" type="button" onclick="analyse()" style="background-color: chocolate;"> GO</button>
+      </div>
+    </div>
     
   </div>
-  <div class="col-lg-6 col-sm-6 col-xs-6" style="padding: 5px 10px; left:20%;width: 50%;" id="tabl2">
-    
   </div>
-</div>
+  <div class="obt_data" id="okoko">
+    <div class="col-lg-6 col-sm-6 col-xs-6" style="padding: 5px 10px; left:20%;width: 50%;border: 1px solid rgba(255,255,255,0.3)" id="tabl1">
+      {% if flag %}
+        <table style="width:50%;table-layout: fixed;height: auto;overflow: auto;margin-top: 0px;border: 1px;" cellpadding="0" cellspacing="0" border="0">
+          <thead>
+            <tr>
+              <th style="text-transform: uppercase; text-align: center; vertical-align: middle; padding: 1px 2px;">Map</th>
+              <th style="text-transform: uppercase; text-align: center; vertical-align: middle; padding: 1px 2px;">Win Percentage</th>
+            </tr>
+          </thead>
+          <tbody>
+          {% for i in flag %}
+              <tr>
+                <td style="text-align: center; vertical-align: middle; padding: 1px 2px;">
+                  {{i[0]}}
+                </td>
+                <td style="text-align: center; vertical-align: middle; padding: 1px 2px;">
+                  {{i[1]}}
+                </td>
+              </tr>
+          {% endfor %}
+          </tbody>
+        </table>
+      {% endif %}
+    </div>
+    <div class="col-lg-6 col-sm-6 col-xs-6" style="padding: 5px 10px; left:20%;width: 50%; border: 1px solid rgba(255,255,255,0.3)" id="tabl2">
+      {% if flag2 %}
+        <table style="width:50%;table-layout: fixed;height: auto;overflow: auto;margin-top: 0px;border: 1px;" cellpadding="0" cellspacing="0" border="0">
+          <thead>
+            <tr>
+              <th style="text-transform: uppercase; text-align: center; vertical-align: middle; padding: 1px 2px;">Map</th>
+              <th style="text-transform: uppercase; text-align: center; vertical-align: middle; padding: 1px 2px;">Win Percentage</th>
+            </tr>
+          </thead>
+          <tbody>
+          {% for j in flag2 %}
+              <tr>
+                <td style="text-align: center; vertical-align: middle; padding: 1px 2px;">
+                  {{j[0]}}
+                </td>
+                <td style="text-align: center; vertical-align: middle; padding: 1px 2px;">
+                  {{j[1]}}
+                </td>
+              </tr>
+          {% endfor %}
+          </tbody>
+        </table>
+      {% endif %}
+    </div>
+  </div>
+
 
 <script>
-  function analyse(){
-  $.ajax(
-      {
-          type: "POST",
-          url: "{{ url_for('page_analysis') }}",
-          data: {
-              team_data: document.getElementById("tdd").value,
-              sd_data: document.getElementById("dd").value
-          },
-          success: function (data) {
-              document.getElementById("popup-form").innerHTML = '<table><thead><tr><th>Event Map</th><th>Win Percent</th></tr></thead><tbody><tr><td>Hello</td><td>World</td></tr><tr><td>Its</td><td>Working</td></tr></tbody></table>';
-              document.getElementById("popup_hide").style.display = "block";
-          }
-      })
+function analyse(){
+  console.log(document.getElementById('tddd').value);
+  console.log(document.getElementById('ddd').value);
+  console.log('hello everyone');
+  $.ajax({
+        url: "{{ url_for('page_analysis') }}",
+        type: "POST",
+        data: {
+              team_data: document.getElementById("tddd").value,
+              sd_data: document.getElementById("ddd").value
+        },
+        // dataType: 'json',
+        success: function (data) {
+          console.log(data.a);
+          window.location.href = "{{ url_for('send', table='table') }}"
+        }
+  });
 }
+
+/*if the user clicks anywhere outside the select box,
+then close all select boxes:*/
 </script>
+
+</body>
+</html>
