--- a/templates/animatelogin.html
+++ b/templates/animatelogin.html
@@ -33,9 +33,9 @@
             </div>
             <div class="vali">
                 {% if flag==1 %}
-                   <label class = "validate" style="text-align: center; display: block; margin: auto; position: relative; width: 600px; top: 360px; right: 300px;color: red;">Invalid Login ID or Password</label>
+                   <label class = "validate" style="text-align: center; display: block; margin: auto; position: relative; width: 600px; top: 380px; right: 300px;color: #7827C4;">Invalid Login ID or Password</label>
                 {% elif flag==2 %}
-                   <label class = "validate" style="text-align: center; display: block; margin: auto; position: relative; width: 600px; top: 360px; right: 300px;">Invalid Credentials</label>
+                   <label class = "validate" style="text-align: center; display: block; margin: auto; position: relative; width: 600px; top: 380px; right: 300px;color :#7827C4;">Invalid Credentials</label>
                 {% endif %}
             </div>
         </div>
