--- a/templates/animatelogin.html
+++ b/templates/animatelogin.html
@@ -35,7 +35,7 @@
                 {% if flag==1 %}
                    <label class = "validate" style="text-align: center; display: block; margin: auto; position: relative; width: 600px; top: 380px; right: 300px;color: #7827C4;">Invalid Login ID or Password</label>
                 {% elif flag==2 %}
-                   <label class = "validate" style="text-align: center; display: block; margin: auto; position: relative; width: 600px; top: 380px; right: 300px;color :#7827C4;">Invalid Credentials</label>
+                   <label class = "validate" style="text-align: center; display: block; margin: auto; position: relative; width: 600px; top: 380px; right: 300px;color :#7827C4;">Invalid Credentials Signup Again</label>
                 {% endif %}
             </div>
         </div>
