--- a/templates/club_details.html
+++ b/templates/club_details.html
@@ -24,6 +24,8 @@
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="/battles">Battle Log</a></li>
             <li><a href="/brawler">Brawler Info</a></li>
+            <li><a href="/new_analysis/no">Custom Analysis</a></li>
+            <li><a href="/no">Analysis</a></li>
           </ul>
         </div>
       </nav>
